<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_0569689" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#D8FFFF"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FA8DC7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:backgroundTint="#C181DB"
                android:fontFamily="sans-serif-black"
                android:text="@string/stopwatch1"
                android:textAlignment="center"
                android:textColor="#7B1FA2"
                android:textSize="50sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ccard"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:backgroundTint="#72F4DB"
                android:elevation="40dp"
                app:cardCornerRadius="180dp"
                app:cardElevation="40dp">

                <TextView
                    android:id="@+id/time_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/timer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/time_view_ms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ccard"

                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"

                android:layout_marginTop="30dp"
                android:backgroundTint="#2CD0E4"
                android:text="@string/start"
                android:textSize="23sp"
                app:cornerRadius="25dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/Hold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ccard"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#FF2CD0E4"
                android:text="@string/hold"
                android:textSize="23sp"
                app:cornerRadius="25dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF2CD0E4"
                android:text="@string/reset"
                android:textSize="23sp"
                app:cornerRadius="25dp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>